--- a/whisper_backend/pyproject.toml
+++ b/whisper_backend/pyproject.toml
@@ -9,8 +9,12 @@ readme = "README.md"
 python = "^3.12"
 django = "^5.1.4"
 psycopg2-binary = "^2.9.10"
-
+loguru = "^0.7.3"
 
 [build-system]
 requires = ["poetry-core"]
 build-backend = "poetry.core.masonry.api"
+
+[tool.black]
+line-length = 79
+target-version = ['py310']
